Class3/VPC/main.tf
# Configure the AWS Provider
provider "aws" {
  region = "us-east-1"
}

resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "kaizen-vpc"
  }
}

resource "aws_subnet" "sb1" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "us-east-1a"
  map_public_ip_on_launch = true


  tags = {
    Name = "sb1"
  }
}

resource "aws_subnet" "sb2" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.2.0/24"
  availability_zone       = "us-east-1b"
  map_public_ip_on_launch = true

  tags = {
    Name = "sb2"
  }
}

resource "aws_subnet" "sb3" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.3.0/24"
  availability_zone       = "us-east-1c"
  map_public_ip_on_launch = true

  tags = {
    Name = "sb3"
  }
}

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "internet-gw"
  }
}

resource "aws_route_table" "rt_table" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "rt-table"
  }
}

resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.sb1.id
  route_table_id = aws_route_table.rt_table.id
}

resource "aws_route_table_association" "b" {
  subnet_id      = aws_subnet.sb2.id
  route_table_id = aws_route_table.rt_table.id
}

resource "aws_route_table_association" "c" {
  subnet_id      = aws_subnet.sb3.id
  route_table_id = aws_route_table.rt_table.id
}
